--- a/BookShopping Ecommerce/Views/Home/Index.cshtml
+++ b/BookShopping Ecommerce/Views/Home/Index.cshtml
@@ -51,11 +51,17 @@
                         <h6 class="card-subtitle mb-2 text-muted">@book.GenreName</h6>
                         <h6 class="card-subtitle mb-2 text-muted">@book.AuthorName </h6>
                         <h6 class="card-subtitle mb-2 text-muted">@book.Price</h6>
+                      
                         <div class="d-grid gap-2">
                             <a href="#" class="btn btn-primary">View Summery</a>
-                            <a href="/Cart/AddItem?bookId=@book.Id" class="btn btn-primary add-to-cart" data-id="@book.Id">
-                                <i class="bi bi-cart-plus"></i> Add to Cart
-                            </a>
+                            @if (book.Quantity > 0)
+                            {
+                                <button type="button" onclick="add(@book.Id)" class="btn btn-primary">Add to cart</button>
+                            }
+                            else
+                            {
+                                <span style="border: 1px solid;padding: 5px 8px;color: red;border-radius: 5px;">Out of stock</span>
+                            }
                         </div>
                     </div>
                 </div>
